agents/weather-app/gitops/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: weather-app
  labels:
    app: weather-app
    app.kubernetes.io/component: weather-app
    app.kubernetes.io/instance: weather-app
    app.kubernetes.io/name: weather-app
    app.kubernetes.io/part-of: weather-app-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: weather-app
        app.kubernetes.io/component: weather-app
        app.kubernetes.io/name: weather-app
        deployment: weather-app
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
    spec:
      containers:
        - name: weather-app
          image: quay.io/rcarrata/weather-app:v4
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
