agents/weather-app/gitops/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: weather-app
  labels:
    app: weather-app
    app.kubernetes.io/component: weather-app
    app.kubernetes.io/instance: weather-app
    app.kubernetes.io/name: weather-app
    app.kubernetes.io/part-of: weather-app-app
spec:
  to:
    kind: Service
    name: weather-app
    weight: 100
  port:
    targetPort: 8000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
